--- a/app/static/css/loginStyles.css
+++ b/app/static/css/loginStyles.css
@@ -1,9 +1,17 @@
 /* unvisited link */
+*{
+    margin:0;
+    padding: 0;
+}
+
 a:link {
     color: white;
     text-decoration: none;
 }
-  
+#background_vid{
+    position: absolute;
+    z-index: -1;
+}
 /* visited link */
 a:visited {
     color: white;
@@ -60,21 +68,24 @@ option.hide{
 }
 
 form.login-form{
-    border-radius: 15px;
-    border-style: solid;
-    border-color:gray;
-    text-align: center;
-    border-width: 2px;
-    margin: 100px 300px;
-    padding: 20px ;
-    width: 350px;
+    text-align: right;
+    width: 400px;
+    margin-right: 10%;
+}
+.form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 40px;
+    background: rgb(222,222,222);
+    background: linear-gradient(164deg, rgba(222,222,222,0.4) 7%, rgba(228,227,233,0.3) 49%, rgba(48,54,54,0.3) 100%);
+    border-radius: 25px;
+    backdrop-filter: blur(6px);
+    border: 2px solid rgba(255, 255, 255, 0.411);
 }
 form.register-form{
-    border-radius: 15px;
-    border-style: solid;
-    border-color:gray;
     text-align: center;
-    border-width: 2px;
     margin: 0px 300px;
     padding: 10px;
     width: 350px;
@@ -86,13 +97,37 @@ form.register-form{
 #gender li{
     width: 50px;
 }
+.regbtn{
+    font-family: 'Dancing Script', cursive;
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 20px;
+}
+#submit{
+    font-family: 'Quicksand', sans-serif;
+    margin-top: 10px;
+    font-size: 24px;
+    font-weight: 500;
+    color: black;
+    align-self: flex-end;
+    background-color: white;
+    border-radius: 10px;
+    padding: 8px 20px;
+    /* border: 2px solid rgba(255, 255, 255, 0.411); */
+    border: none;
+    transition: background-color 0.3s;
+}
+#submit:hover{
+    background-color: rgb(202, 202, 202);
+    cursor: pointer;
+}
 div.login-page{
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
     text-align: center;
     min-height: 100vh;
-    background-color: black;
+    background-color: transparent;
 }
 div.register-page{
     display: flex;
@@ -100,24 +135,63 @@ div.register-page{
     align-items: center;
     text-align: center;
     min-height: 100vh;
-    background-color: black;
+    background-color: transparent;
 }
 h1{
-    text-align: center;
+    position:absolute;
+    left:30px;
+    top:10px;
     color: white;
-    font-family: 'Cinzel Decorative', cursive;
+    font-family: 'Dancing Script', cursive;
     font-weight: 700;
+    font-size: 75px;
 }
 h2{
     text-align: center;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-input{
-    border-style: solid;
-    border-color: lightgray;
+#username{
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 32px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.411);
     padding: 10px;
     width: 300px; 
+}
+#username::placeholder{
+    color: white;
+    opacity: 0.5;
+    font-family: 'Quicksand', sans-serif;
+}
+#username:focus-visible{
+    outline: none;
+}
+#password:focus-visible{
+    outline: none;
+}
+#password::placeholder{
+    color: white;
+    opacity: 0.5;
+    font-family: 'Quicksand', sans-serif;
+}
+#password{
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 32px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.411);
+    padding: 10px;
+    width: 300px; 
+}
+.overlay{
+    background-color: black;
+    opacity: .7;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: -1;
 }
 p{
     text-align: center;
