--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,12 +5,16 @@
       <title>
             {% block title %}BlindFold{% endblock %}
       </title> 
-      <link rel="stylesheet" href="static/css/loginStyles.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/static/css/loginStyles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
+      <video autoplay muted loop id="background_vid" disablePictureInPicture>
+        <source src="../static/Blindfold background.mp4" type="video/mp4">
+      </video>
+      <div class="overlay"></div>
 {% block content %}
 
 {% endblock %}
