--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,17 +3,15 @@
 {% block content %}
 
   <div class="login-page">
-
+    <h1>BlindFold</h1>
     <form class="login-form" action="/login" method="POST">
-      <h1>BlindFold</h1>
-      <h2>Sign in</h2>
-
-      {{ form.hidden_tag() }}
-      {{ form.username }}
-      {{ form.password }}
-      {{ form.submit }}
-      <a href="/register">Don't have an account? Sign up!</a>
-
+      <div class="form-container">
+        {{ form.hidden_tag() }}
+        {{ form.username }}
+        {{ form.password }}
+        {{ form.submit }}
+      <a class="regbtn" href="/register">Don't have an account? Sign up!</a>
+      </div>
     </form>
 
   </div>
