--- a/app/templates/matches.html
+++ b/app/templates/matches.html
@@ -1,9 +1,46 @@
 {% extends 'baseX.html' %}
 {% block title %}Match{% endblock %}
 {% block content %}
-    <h1>Matches</h1>
-    {% for user in users %}
-        <h3>{{ user.firstName }} {{ user.lastName }}</h3>
-    {% endfor %}
+    <div class="matches-page">
+        <div id="user-list">
+            {% for user in users %}
+            <a href="/matches/{{ user.id }}">
+                <div class="single-user-{{ user.id }}">
+                    <p>{{ user.firstName }} {{ user.lastName }}</p>
+                </div>
+            </a>
+            {% endfor %}
+        </div>
+        {% if user %}
+            <div id="chatbox">
+                <div class="all-messages">
+                    {% for msg in messages %}
+                        {% if msg.userid_sent != user.id %}
+                            <p class="our-msg">
+                                {{ msg.message }}
+                            </p>
+                        {% else %}
+                            <p class="their-msg">
+                                {{ msg.message }}
+                            </p>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                <form method="POST" action="/message/{{ user.id }}">
+                    <textarea class="message-box" name="message" rows="2" placeholder="Don't be shy, send a message..."></textarea>
+                </form>
+            </div>
+            <div id="user-profile">
+                <div class="user-header">
+                    <h2>{{ user.firstName }} {{ user.lastName }}</h2>
+                    <h4>{{ user.gender }} • {{ user.age }} years old</h4>
+                </div>
+                <div class="user-bio">
+                    <h3>Biography</h3>
+                    <p>{{ user.bio }}</p>
+                </div>
 
+            </div>
+        {% endif %}
+    </div>
 {% endblock %}
