--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,22 +1,24 @@
 {% extends 'baseX.html' %}
 {% block title %}Profile{% endblock %}
 {% block content %}
-    <h1>Profile</h1>
-    <div class="profile">
-        <div class="left">
-            <h2>{{ user.username }}</h2>
-            <div class="profile-pic">
-                <img src={{ user.image if user.image else "../static/images/default-profile.webp"}} alt="default">
+    <div class="profile-page">
+        <div class="profile">
+            <div class="left">
+                <h2>{{ user.username }}</h2>
+                <div class="profile-pic">
+                    <img src={{ user.image if user.image else "../static/images/default-profile.webp"}} alt="default">
+                </div>
+                <p>{{ user.firstName }} {{ user.lastName }}</p>
+                <p>{{ user.email }}</p>
+                <p>Age: {{ user.age }}</p>
+                <p>Gender: {{ user.gender }}</p>
+                <p>Preference: {{ user.preference }}</p>
             </div>
-            <p>{{ user.firstName }} {{ user.lastName }}</p>
-            <p>{{ user.email }}</p>
-            <p>Age: {{ user.age }}</p>
-            <p>Gender: {{ user.gender }}</p>
-            <p>Preference: {{ user.preference }}</p>
-        </div>
-        <div class="right">
-            <h2>Biography</h2>
-            <p>{{ user.bio }}</p><br>
-        </div>
-    </div>  
+            <div class="right">
+                <h2>Biography</h2>
+                <p>{{ user.bio }}</p><br>
+            </div>
+        </div>  
+
+    </div>
 {% endblock %}
