--- a/app/static/css/navbar.css
+++ b/app/static/css/navbar.css
@@ -51,11 +51,13 @@ ul {
   .account{
     height: 40px;
     width: 40px;
-    overflow: hidden;
     margin: 5px;
     background-color: white;
     border-radius: 50%;
     margin-right: 20px;
+  }
+  .account:hover{
+    cursor: pointer;
   }
   .account img{
       border-radius: 50%;
@@ -67,7 +69,34 @@ ul {
     text-align: center;
     text-decoration: none;
   }
-  .dropdown{
-    height: 40px;
-    width: 40px;
+.dropdown-content{
+  pointer-events: none;
+  opacity: 0;
+  position: absolute;
+  top: calc(50px + 10px);
+  right: 15px;
+  background-color: white;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Quicksand', sans-serif;
+  transform: translateY(-10px);
+  transition: transform 0.4s, opacity 0.4s;
+}
+.dropdown-content a{
+  padding: 10px 20px;
+  width: 100%;
+  border-bottom: solid 1px rgb(226, 226, 226);
+  transition: background-color 0.2s;
+}
+.dropdown-content a:hover{
+  background-color: rgb(226, 226, 226);
+}
+.show{
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(0px);
 }
