--- a/app/templates/match.html
+++ b/app/templates/match.html
@@ -20,10 +20,10 @@
                 <p>{{ user.bio }}</p><br>
             </div>
         </div>  
-        <a href="/match">Find a new match!</a> 
+        <a id="like" href="/match"><img src="../static/images/x.svg"></img></a> 
         <form action="/matched" method="POST">
             <input type="hidden" value={{ user.email }} name="email" id="email">
-            <button>Like</button>
+            <button><img src="../static/images/like.svg"></button>
         </form>
     </div>
 {% endblock %}
