--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -8,18 +8,35 @@
         <form class="register-form" action="/register" method="POST">
             <h2>Sign up</h2>
             {{ form.hidden_tag() }}
-            {{ form.firstName }}
-            {{ form.lastName }}
-            {{ form.email }}
-            {{ form.age }}
-            {{ form.gender }}
-            {{ form.preference }}
-            {{ form.username }}
-            {{ form.password }}
-            {{ form.bio }}
+            <input id="username" maxlength="50" minlength="4" name="username" placeholder="Username" required type="text" autocomplete="off">
+            <input type="text" id="firstName" name="firstName" placeholder="First Name" minlength="1" required maxlength="50" autocomplete="off">
+            <input type="text" id="lastName" name="lastName" placeholder="Last Name" minlength="1" required maxlength="50" autocomplete="off">
+            <input type="email" id="email" name="email" placeholder="Email" minlength="3" required maxlength="50" autocomplete="off">
+            <input id="age" name="age" placeholder="Age" required type="number">
+            <select id="gender" name="gender" required>
+                <option value="" disabled selected>Gender</option>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+            </select>
+            <select id="preference" name="preference" required>
+                <option value="" disabled selected>Preference</option>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+            </select>
+            <input id="password" maxlength="40" minlength="8" name="password" placeholder="Password" required type="password">
+            <textarea id="bio" maxlength="600" minlength="100" name="bio" placeholder="Biography (Minimum 100 characters)" required></textarea>
+            <!-- {{ form.firstName }} -->
+            <!-- {{ form.lastName }} -->
+            <!-- {{ form.email }} -->
+            <!-- {{ form.age }} -->
+            <!-- {{ form.gender }} -->
+            <!-- {{ form.preference }} -->
+            <!-- {{ form.username }} -->
+            <!-- {{ form.password }} -->
+            <!-- {{ form.bio }} -->
             {{ form.submit }}
         </form>
-
+        <a href='/login' class="login-btn">Already have an account? Sign in</a>
     </div>
         {{ users }}
 
