--- a/app/static/css/loginStyles.css
+++ b/app/static/css/loginStyles.css
@@ -76,13 +76,14 @@ form.login-form{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
     padding: 40px;
-    background: rgb(222,222,222);
-    background: linear-gradient(164deg, rgba(222,222,222,0.4) 7%, rgba(228,227,233,0.3) 49%, rgba(48,54,54,0.3) 100%);
+    background: rgba(255, 255, 255, 0.2);
     border-radius: 25px;
     backdrop-filter: blur(6px);
-    border: 2px solid rgba(255, 255, 255, 0.411);
+    border-top: 1px solid rgba(255, 255, 255, 0.7);
+    border-left: 1px solid rgba(255, 255, 255, 0.7);
+    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.3);
 }
 
 #gender{
@@ -99,14 +100,14 @@ form.login-form{
 }
 #submit{
     font-family: 'Quicksand', sans-serif;
-    margin-top: 10px;
     font-size: 24px;
     font-weight: 500;
     color: black;
-    align-self: flex-end;
+    align-self: center;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 25px;
     padding: 8px 20px;
+    width: 100%;
     /* border: 2px solid rgba(255, 255, 255, 0.411); */
     border: none;
     transition: background-color 0.3s;
@@ -137,18 +138,17 @@ h2{
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-#username{
-    background-color: transparent;
+#username, #password{
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 25px;
     border: none;
     color: white;
-    font-size: 32px;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.411);
+    font-size: 24px;
     padding: 10px;
     width: 300px; 
 }
-#username::placeholder{
+#username::placeholder, #password::placeholder{
     color: white;
-    opacity: 0.5;
     font-family: 'Quicksand', sans-serif;
 }
 #username:focus-visible{
@@ -157,20 +157,7 @@ h2{
 #password:focus-visible{
     outline: none;
 }
-#password::placeholder{
-    color: white;
-    opacity: 0.5;
-    font-family: 'Quicksand', sans-serif;
-}
-#password{
-    background-color: transparent;
-    border: none;
-    color: white;
-    font-size: 32px;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.411);
-    padding: 10px;
-    width: 300px; 
-}
+
 .overlay{
     background-color: black;
     opacity: .7;
@@ -216,6 +203,7 @@ div.register-page{
     border-top: 1px solid rgba(255, 255, 255, 0.7);
     border-left: 1px solid rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(5px);
+    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.3);
 }
 
 form.register-form * {
@@ -274,6 +262,7 @@ form.register-form #username::placeholder, form.register-form #password::placeho
 form.register-form #submit {
     border-radius: 25px;
     align-self: center;
+    width: 50%;
 }
 
 form.register-form #bio {
@@ -293,4 +282,3 @@ form.register-form #bio {
 #username:autofill {
     background-color: transparent, !important;
 }
-
