--- a/app/templates/baseX.html
+++ b/app/templates/baseX.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="/static/css/profile.css"> 
         <link rel="stylesheet" href="/static/css/navbar.css">
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+        <scr>
     </head>
     <body>
         <div class="nav-bar">
