--- a/app/templates/baseX.html
+++ b/app/templates/baseX.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="/static/css/profileStyles.css">
         <link rel="stylesheet" href="/static/css/chatStyles.css">
+        <link rel="stylesheet" href="/static/css/matches.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
