DB Postgresql Migration, Front end script

--- a/app/templates/baseX.html
+++ b/app/templates/baseX.html
@@ -15,7 +15,6 @@
         <link rel="stylesheet" href="/static/css/profile.css"> 
         <link rel="stylesheet" href="/static/css/navbar.css">
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
-        <scr>
     </head>
     <body>
         <div class="nav-bar">
@@ -38,4 +37,5 @@
     </body>
     <script src="/static/js/submitEvent.js"></script>
     <script src="/static/js/dropdown.js"></script>
+    <script src="/static/js/matchScript.js"></script>
 </html>
