--- a/app/templates/baseX.html
+++ b/app/templates/baseX.html
@@ -7,6 +7,8 @@
       </title>
 
         <link rel="stylesheet" href="/static/css/profileStyles.css">
+        <link rel="stylesheet" href="/static/css/modal.css">
+        <link rel="stylesheet" href="/static/css/loader.css">
         <link rel="stylesheet" href="/static/css/chatStyles.css">
         <link rel="stylesheet" href="/static/css/matches.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +19,10 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     </head>
     <body>
-        <div class="nav-bar">
+        <div class="loader-wrapper">
+            <div class="lds-heart"><div></div></div>
+        </div>
+            <div class="nav-bar">
             <a id="logo" href="/home">Blindfold</a>
             <ul>
                 <a id="find" href="/match"><img src="../static/images/findmatch.svg"></a>
@@ -38,4 +43,6 @@
     <script src="/static/js/submitEvent.js"></script>
     <script src="/static/js/dropdown.js"></script>
     <script src="/static/js/matchScript.js"></script>
+    <script src="/static/js/hideLoader.js"></script>
+    <script src="/static/js/hideModal.js"></script>
 </html>
