--- a/app/templates/match.html
+++ b/app/templates/match.html
@@ -27,5 +27,10 @@
                 <button id="like"><img src="../static/images/filledheart.svg"></button>
             </form>
         </div>
+        <div class="modal-wrapper">
+            <div class="close" onclick="hide()"><img src='../static/images/close.svg'></div>
+            <div class="match-popup">
+            </div>
+        </div>
     </div>
 {% endblock %}
