Complete overhaul of login

--- a/app/templates/match.html
+++ b/app/templates/match.html
@@ -2,7 +2,7 @@
 {% block title %}Match{% endblock %}
 {% block content %}
 <div class="profile-page">
-        <h1>Love is blind, start matching!</h1>
+        <h1>Find a pen pal, start matching!</h1>
         <div class="profile">
             <div class="left">
                 <h2 class="match-username">{{ user.username }}</h2>
