--- a/app/static/css/loginStyles.css
+++ b/app/static/css/loginStyles.css
@@ -11,6 +11,9 @@ a:link {
 #background_vid{
     position: absolute;
     z-index: -1;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
 }
 /* visited link */
 a:visited {
@@ -29,14 +32,7 @@ a:active {
     color: white;
     text-decoration: none;
 }
-body{
-    overflow: hidden;
-}
 
-.login-page{
-    display: flex;
-    align-items: flex-end;
-}
 button.sign-button:hover {
     background-color: #90ccf4;
 }
@@ -136,21 +132,21 @@ h2.registerh {
 }
 div.login-page{
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    justify-content: space-between;
+    align-items: center;
     text-align: center;
-    min-height: 100vh;
     background-color: transparent;
-    flex-direction: column;
+    flex-direction: row;
+    height: 100vh;
 }
 h1{
-    position:absolute;
     left:30px;
     top:10px;
     color: white;
     font-family: 'Dancing Script', cursive;
     font-weight: 700;
-    font-size: 75px;
+    font-size: 65px;
+    margin-left: 1vw;
 }
 h2{
     text-align: center;
@@ -248,11 +244,9 @@ form.register-form input {
     width: 50%;
     font-size: 12px;
 }
-
 form.register-form input::placeholder {
     color: white;
 }
-
 form.register-form #gender, #preference {
     padding: 10px;
     background-color: rgba(255, 255, 255, 0.3);
@@ -266,12 +260,10 @@ form.register-form #gender, #preference {
     color: white;
     appearance: none;
 }
-
 form.register-form option {
     border-radius: 0;
     color: black;
 }
-
 form.register-form #username, form.register-form #password{
     width: 50%;
     font-size: 12px;
@@ -279,18 +271,15 @@ form.register-form #username, form.register-form #password{
     border: none;
     color: white;
 }
-
 form.register-form #username::placeholder, form.register-form #password::placeholder {
     color: white;
     opacity: 1;
 }
-
 form.register-form #submit {
     border-radius: 25px;
     align-self: center;
     width: 195px;
 }
-
 form.register-form #bio {
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 25px;
@@ -308,3 +297,200 @@ form.register-form #bio {
 #username:autofill {
     background-color: transparent, !important;
 }
+
+/********************************************************
+******************HOME PAGE STYLES*******************
+*********************************************************/
+
+
+.header{
+    background-color: black;
+    height: 8vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 20px;
+    position: fixed;
+    z-index: 2;
+    width: 100vw;
+}
+#bf-icon{
+    width: 5vw;
+    height: 3vh;
+}
+.home-logo{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 0.5vw;
+}
+.home-navbar{
+    display: flex;
+    white-space: nowrap;
+}
+#mid-nav{
+    display: flex;
+    gap: 2vw;
+}
+.home-navbar-two{
+    margin-right: 2vw;
+}
+#mid-nav a, #end-nav a {
+    color: #fff;
+    text-decoration: none;
+    
+    display: inline-block;
+    padding: 15px 20px;
+    position: relative;
+  }
+  #mid-nav a:after {    
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #fff;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
+  #mid-nav a:hover:after { 
+    width: 100%; 
+    left: 0; 
+}
+#end-nav a:after {    
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #fff;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
+  #end-nav a:hover:after { 
+    width: 100%; 
+    left: 0; 
+}
+.home-navbar-one{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 45%;
+}
+.intro-summary{
+    margin-bottom: 10vh;
+}
+.our-mission{
+    display: flex;
+    flex-direction: row;
+    font-family: 'Quicksand', sans-serif;
+    color: black;
+    background-color: black;
+    height: 100vh;
+    align-items: center;
+}
+.mission-img{
+    height: 100%;
+    width: 100%;
+}
+.mission-imgbox{
+    position: absolute;
+    height: 90%;
+    width: 70%;
+    right: 0;
+}
+.img-overlay{
+    background-color: black;
+    opacity: .7;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+.mission-title{
+    color: gray;
+    font-size: 17px;
+}
+.mission-textbox{
+    margin-left: 5vw;
+    z-index: 1;
+    padding: 3pc;
+    width: 50vw;
+}
+#mission-firstword{
+    font-size: 40px;
+    font-weight: 700;
+}
+.our-mission h2{
+    font-size: 22px;
+    font-weight: 100;
+    color: white;
+    text-align: left;
+}
+.about-us{
+    font-size: 25px;
+    display: flex;
+    flex-direction: row;
+    font-family: 'Quicksand', sans-serif;
+    color: black;
+    background-color: black;
+    height: 100vh;
+    align-items: center;
+}
+.about-us h2{
+    color: white;
+    font-size: 22px;
+    font-weight: 100;
+    text-align: left;
+}
+.about-textbox{
+    margin-left: 5vw;
+    z-index: 1;
+    padding: 3pc;
+    width: 50vw;
+}
+#about-firstword{
+    font-size: 40px;
+    font-weight: 700;
+}
+.about-title{
+    color: gray;
+    font-size: 17px;
+}
+.about-img{
+    margin-left: 2vw;
+}
+.faq{
+    background-color: black;
+}
+.faq p{
+    color: white;
+    font-family: 'Quicksand', sans-serif;
+}
+
+/********************************************************
+******************Scrollbar*******************
+*********************************************************/
+
+/* Scrollbar Styling */
+::-webkit-scrollbar {
+    width: 10px;
+}
+ 
+::-webkit-scrollbar-track {
+    background-color: black;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: white; 
+}
+
+
