--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,13 +6,14 @@
             {% block title %}BlindFold{% endblock %}
       </title> 
         <link rel="stylesheet" href="/static/css/loginStyles.css">
+        <link rel="stylesheet" href="/static/css/intro.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
       <video autoplay muted loop id="background_vid" disablePictureInPicture>
-        <source src="../static/Blindfold background.mp4" type="video/mp4">
+        <source src="../static/BFBackground.mp4" type="video/mp4">
       </video>
       <div class="overlay"></div>
 {% block content %}
@@ -20,4 +21,5 @@
 {% endblock %}
 
     </body>
+    <script src="/static/js/bookmarkfade.js"></script>
 </html>
