--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,8 +2,32 @@
 {% block title %}Login{% endblock %}
 {% block content %}
 
+  <div class="header">
+    <div class="home-navbar-one">
+      <div class="home-logo">
+        <h1>BlindFold</h1>
+        <img id="bf-icon"src="../static/images/BFicon.png">
+      </div>
+      <div class="home-navbar">
+        <ul id="mid-nav">
+          <a href=".our-mission">Our Mission</a>
+          <a href=".about-us">About Us</a>
+          <a href=".faq">FAQ's</a>
+          <a href="">Contact Us</a>
+        </ul>
+      </div>
+    </div>
+    <div class="home-navbar-two">
+      <ul id="end-nav">
+        <a href=".login-page">Login / Register</a>
+      </ul>
+    </div>
+  </div>
   <div class="login-page">
-    <h1>BlindFold</h1>
+    <div class="intro-summary">
+      <h1 id="intro-one">Bringing the world together</h1>
+      <h2 id="intro-two">One message at a time</h2>
+    </div>
     <div class="move-to-right">
       <form class="login-form" action="/login" method="POST">
         <div class="form-container">
@@ -17,6 +41,46 @@
       <a class="regbtn" href="/register">Don't have an account? Sign up!</a>
     </div>
 
+  </div>
+  <div class="our-mission">
+    <div class="mission-textbox">
+      <h3 class="mission-title">Our Mission</h3>
+      <h2>
+        <span id="mission-firstword">Connect...</span>&emsp;with people from all over the world on a deeper level with Blindfold, the pen pal web application that prioritizes personal connection over superficial appearances. 
+        Say goodbye to the distractions of pictures and focus on meaningful dialogue with people from different backgrounds and beliefs. Upgrade your communication and make lasting 
+        connections with Blindfold. 
+      </h2>
+    </div>
+    <div class="mission-imgbox">
+      <div class="img-overlay"></div>
+      <img class="mission-img" src="../static/images/mission-img.jpg">
+    </div>
+  </div>
+  <div class="about-us">
+    <div class="about-imgbox">
+      <div class="img-overlay"></div>
+      <img class="about-img" src="../static/images/Albara.jpg">
+    </div>
+    <div class="about-textbox">
+      <h3 class="about-title">About Us</h3>
+      <h2>
+        <span id="about-firstword">Meet...</span>&emsp;Albara Abdulkarim, the visionary software engineer behind Blindfold, the pen pal web application that prioritizes personal connection. As a recent graduate, Albara is 
+        driven to lead and inspire by creating innovative software. With a passion for social interaction and building personalized relationships, he created Blindfold as his capstone 
+        project and continues to maintain it. If you're an employer looking for talented engineers, reach out to Albara via the contact page of the website.
+      </h2>
+    </div>
+  </div>
+  <div class="faq">
+    <h2>Q: </h2>
+    <p>A: </p>
+    <h2>Q: </h2>
+    <p>A: </p>
+    <h2>Q: </h2>
+    <p>A: </p>
+    <h2>Q: </h2>
+    <p>A: </p>
+    <h2>Q: </h2>
+    <p>A: </p>
   </div>
 
 {% endblock %}
