--- a/app/static/css/loginStyles.css
+++ b/app/static/css/loginStyles.css
@@ -454,6 +454,7 @@ form.register-form #bio {
     z-index: 1;
     padding: 3pc;
     width: 50vw;
+    right: 0;
 }
 #about-firstword{
     font-size: 40px;
@@ -463,8 +464,22 @@ form.register-form #bio {
     color: gray;
     font-size: 17px;
 }
+.about-imgbox{
+    position: absolute;
+    height: 50%;
+    width: 50%;
+    left: 0;
+}
 .about-img{
+    position: absolute;
     margin-left: 2vw;
+    max-width: 100%;
+    max-height: 100%;
+}
+.about-overlay{
+    max-width: 100%;
+    max-height: 100%;
+    z-index: 1;
 }
 .faq{
     background-color: black;
