--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -52,14 +52,16 @@
       </h2>
     </div>
     <div class="mission-imgbox">
-      <div class="img-overlay"></div>
-      <img class="mission-img" src="../static/images/mission-img.jpg">
+      <div class="img-overlay">
+        <img class="mission-img" src="../static/images/mission-img.jpg">
+      </div>
     </div>
   </div>
   <div class="about-us">
     <div class="about-imgbox">
-      <div class="img-overlay"></div>
-      <img class="about-img" src="../static/images/Albara.jpg">
+      <div class="about-overlay">
+        <img class="about-img" src="../static/images/Albara.jpg">
+      </div>
     </div>
     <div class="about-textbox">
       <h3 class="about-title">About Us</h3>
