--- a/app/static/css/loginStyles.css
+++ b/app/static/css/loginStyles.css
@@ -408,7 +408,7 @@ form.register-form #bio {
 }
 .img-overlay{
     background-color: black;
-    opacity: .7;
+    opacity: .4;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -437,6 +437,7 @@ form.register-form #bio {
     font-size: 25px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     font-family: 'Quicksand', sans-serif;
     color: black;
     background-color: black;
@@ -450,11 +451,9 @@ form.register-form #bio {
     text-align: left;
 }
 .about-textbox{
-    margin-left: 5vw;
     z-index: 1;
     padding: 3pc;
     width: 50vw;
-    right: 0;
 }
 #about-firstword{
     font-size: 40px;
@@ -465,9 +464,8 @@ form.register-form #bio {
     font-size: 17px;
 }
 .about-imgbox{
-    position: absolute;
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
     left: 0;
 }
 .about-img{
@@ -477,8 +475,10 @@ form.register-form #bio {
     max-height: 100%;
 }
 .about-overlay{
-    max-width: 100%;
-    max-height: 100%;
+    background-color: black;
+    opacity: .4;
+    width: 100%;
+    height: 100%;
     z-index: 1;
 }
 .faq{
